--- a/scss/globales/_reset.scss
+++ b/scss/globales/_reset.scss
@@ -1,4 +1,5 @@
-@use '../globales/variables.scss' as v;
+@use '../globales/variables' as v;
+@use '../globales/mixins' as m;
 * {
     margin: 0;
     padding: 0;
@@ -12,6 +13,23 @@ html {
     font-size: 62.5%;
 }
 body {
+    display: grid;
+    place-items: center;
+    min-height: 100vh;
+
     font-size: 1.6rem;
     font-family: v.$ff-primario;
+    background-color: v.$clr-secundario-200;
+}
+img {
+    max-width: 100%;
+}
+
+// Helpers
+.contenedor {
+    display: grid;
+    place-items: center;
+    gap: 8rem;
+    max-width: 900px;
+    margin: 1rem;
 }
