--- a/scss/globales/_variables.scss
+++ b/scss/globales/_variables.scss
@@ -16,9 +16,10 @@ $fw-bold: 700;
 $fs-100: 1.6rem;
 $fs-200: 2.4rem;
 $fs-400: 3rem;
+$fs-500: 4.5rem;
 
 //? Media Querys
 $telefono: 480px;
 $tablet: 768px;
-$desktop: 992;
+$desktop: 992px;
 $desktopXL: 1200px;
