--- a/scss/layout/_calculadora.scss
+++ b/scss/layout/_calculadora.scss
@@ -12,4 +12,5 @@
 
     border-radius: 2rem;
     background-color: v.$clr-neutral-100;
+    box-shadow: 0px 8px 25px -3px rgba(127,156,159,0.6);
 }
