--- a/scss/layout/_formulario.scss
+++ b/scss/layout/_formulario.scss
@@ -27,6 +27,11 @@
         }
     }
 
+    .custom {
+        padding: 0;
+        text-align: center;
+    }
+
     .input-contenedor {
         position: relative;
         margin-bottom: 4rem;
